--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/node": "^12.19.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^2.25.2",
+    "react-query-devtools": "^2.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "typescript": "^3.7.5"
