--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "axios": "^0.20.0",
+    "i18next": "^19.8.2",
+    "jss": "^10.4.0",
+    "jss-rtl": "^0.3.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.7.3",
     "react-query": "^2.25.2",
     "react-query-devtools": "^2.6.0",
     "react-router-dom": "^5.2.0",
@@ -30,7 +36,7 @@
     "eslint-plugin-unused-imports": "^0.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
