--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.20.0",
+    "clsx": "^1.1.1",
     "i18next": "^19.8.2",
     "jss": "^10.4.0",
     "jss-rtl": "^0.3.0",
