--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.20.0",
     "clsx": "^1.1.1",
+    "eslint": "^7.13.0",
     "i18next": "^19.8.2",
     "jss": "^10.4.0",
     "jss-rtl": "^0.3.0",
@@ -31,7 +32,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
-    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unused-imports": "^0.1.3"
@@ -39,11 +40,29 @@
   "scripts": {
     "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
+    "lint": "eslint **/*.{jsx,js,ts,tsx}",
+    "lint:fix": "eslint --fix **/*.{jsx,js,ts,tsx}",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app"
+    ],
+    "rules": {
+      "semi": [
+        2,
+        "never"
+      ],
+      "indent": [
+        "error",
+        2
+      ],
+      "quotes": [
+        "error",
+        "single"
+      ]
+    }
   },
   "browserslist": {
     "production": [
