--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@types/node": "^12.19.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-transition-group": "^4.4.0",
     "@types/sweetalert": "^2.0.4",
     "axios": "^0.20.0",
     "clsx": "^1.1.1",
     "history": "^5.0.0",
     "i18next": "^19.8.2",
+    "jalaali-js": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
     "jss": "^10.4.0",
     "jss-rtl": "^0.3.0",
@@ -29,10 +32,13 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.7.3",
+    "react-modal": "^3.11.2",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-query": "^2.25.2",
     "react-query-devtools": "^2.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
+    "react-transition-group": "^4.4.1",
     "sweetalert2": "^10.9.0",
     "sweetalert2-react-content": "^3.2.1",
     "typescript": "^3.7.5"
