Disable eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,6 @@
     "indent": ["error", 2, { "SwitchCase": 1 }],
     "jsx-a11y/no-onchange": 0,
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "off"
   }
 }
