--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -20,7 +22,9 @@
     "@types/react-transition-group": "^4.4.0",
     "@types/sweetalert": "^2.0.4",
     "axios": "^0.20.0",
+    "classnames": "^2.2.6",
     "clsx": "^1.1.1",
+    "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
     "history": "^5.0.0",
     "i18next": "^19.8.2",
@@ -29,6 +33,7 @@
     "jss": "^10.4.0",
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.20",
+    "material-table": "^1.57.2",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
