--- a/package.json
+++ b/package.json
@@ -50,19 +50,11 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-unused-imports": "^0.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "SET NODE_ENV=dev npm run build --dev --configuration=dev && react-scripts build",
+    "build": "react-scripts build",
     "build:dev": "SET NODE_ENV=dev npm run build --dev --configuration=dev && react-scripts build",
-    "lint": "eslint './src/**/*.{jsx,js,ts,tsx}'",
-    "lint:fix": "eslint --fix './src/**/*.{jsx,js,ts,tsx}'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
