Nolint3 - build:dev

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build_solution:
     - main
   script:
     - "npm i"
-    - "npm run build"
+    - "npm run build:dev"
   artifacts:
     expire_in: 1 week
     paths:
