--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "SET NODE_ENV=dev SET CI=false npm run build --dev --configuration=dev && react-scripts build",
+    "build": "react-scripts build",
     "build:dev": "SET NODE_ENV=dev SET CI=false npm run build --dev --configuration=dev && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
