--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "env": {
-    "browser": true
+    "browser": true,
+    "CI": false
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -25,20 +26,22 @@
   ],
   "rules": {
     "jsx-a11y/label-has-associated-control": 0,
-    "@typescript-eslint/no-unused-vars" : "off",
-    "unused-imports/no-unused-imports" : "error",
-    "unused-imports/no-unused-vars-ts": "error",
+    "unused-imports/no-unused-imports" : "off",
+    "unused-imports/no-unused-vars-ts": "off",
+    "unused-imports/no-duplicate-case": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-duplicate-case": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/no-inferrable-types": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "object-curly-spacing": [2, "always"],
-    "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error",
-    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "react/jsx-uses-react": "off",
+    "react/jsx-uses-vars": "off",
+    "indent": ["off", 2, { "SwitchCase": 1 }],
     "jsx-a11y/no-onchange": 0,
-    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/rules-of-hooks": "off",
     "react-hooks/exhaustive-deps": "off"
   }
 }
