--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "SET NODE_ENV=dev npm run build --dev --configuration=dev && react-scripts build",
+    "build": "react-scripts build",
     "build:dev": "SET NODE_ENV=dev npm run build --dev --configuration=dev && react-scripts build",
     "lint": "eslint './src/**/*.{jsx,js,ts,tsx}'",
     "lint:fix": "eslint --fix './src/**/*.{jsx,js,ts,tsx}'",
@@ -91,7 +91,7 @@
       "react-hooks/exhaustive-deps": "off"
     }
   },
-  "esling": {
+  "eslint": {
     "enable": false
   },
   "browserslist": {
