--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/classnames": "^2.2.11",
+    "@types/debounce": "^1.2.0",
     "@types/jest": "^24.9.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
     "@types/node": "^12.19.0",
     "@types/react": "^16.9.53",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.6",
@@ -26,6 +29,7 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
+    "filefy": "^0.1.10",
     "history": "^5.0.0",
     "i18next": "^19.8.2",
     "jalaali-js": "^1.1.5",
@@ -36,8 +40,10 @@
     "material-table": "^1.57.2",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.7.3",
+    "react-js-to-ts": "^1.4.0",
     "react-modal": "^3.11.2",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-query": "^2.25.2",
