--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "sweetalert2-react-content": "^3.2.1",
     "typescript": "^3.7.5"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -64,7 +63,7 @@
     "extends": [],
     "rules": {
       "jsx-a11y/label-has-associated-control": 0,
-      "unused-imports/no-unused-imports" : "off",
+      "unused-imports/no-unused-imports": "off",
       "unused-imports/no-unused-vars-ts": "off",
       "unused-imports/no-duplicate-case": "off",
       "@typescript-eslint/no-unused-vars": "off",
@@ -74,10 +73,19 @@
       "@typescript-eslint/ban-ts-ignore": "off",
       "@typescript-eslint/no-inferrable-types": "off",
       "@typescript-eslint/no-non-null-assertion": "off",
-      "object-curly-spacing": [2, "always"],
+      "object-curly-spacing": [
+        2,
+        "always"
+      ],
       "react/jsx-uses-react": "off",
       "react/jsx-uses-vars": "off",
-      "indent": ["off", 2, { "SwitchCase": 1 }],
+      "indent": [
+        "off",
+        2,
+        {
+          "SwitchCase": 1
+        }
+      ],
       "jsx-a11y/no-onchange": 0,
       "react-hooks/rules-of-hooks": "off",
       "react-hooks/exhaustive-deps": "off"
