--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.20",
     "material-table": "^1.57.2",
+    "material-ui-search-bar": "^1.0.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
