Implement sidebar in first step of transfer progress

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-select": "^3.0.28",
     "@types/react-transition-group": "^4.4.0",
+    "@types/styled-components": "^5.1.5",
     "@types/sweetalert": "^2.0.4",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
@@ -52,7 +54,9 @@
     "react-query-devtools": "^2.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
+    "react-select": "^3.1.1",
     "react-transition-group": "^4.4.1",
+    "styled-components": "^5.2.1",
     "sweetalert2": "^10.9.0",
     "sweetalert2-react-content": "^3.2.1",
     "typescript": "^3.7.5"
