--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -34,6 +38,7 @@
     "filefy": "^0.1.10",
     "history": "^5.0.0",
     "i18next": "^19.8.2",
+    "install": "^0.13.0",
     "jalaali-js": "^1.1.5",
     "jalali-moment": "^3.3.9",
     "jsonwebtoken": "^8.5.1",
@@ -43,6 +48,7 @@
     "material-table": "^1.57.2",
     "material-ui-search-bar": "^1.0.0",
     "node-sass": "^4.14.1",
+    "npm": "^6.14.10",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
