--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "history": "^5.0.0",
     "i18next": "^19.8.2",
     "install": "^0.13.0",
+    "izitoast-react": "^1.0.16",
     "jalaali-js": "^1.1.5",
     "jalali-moment": "^3.3.9",
     "jsonwebtoken": "^8.5.1",
@@ -48,6 +49,7 @@
     "material-table": "^1.57.2",
     "material-ui-search-bar": "^1.0.0",
     "node-sass": "^4.14.1",
+    "notistack": "^1.0.3",
     "npm": "^6.14.10",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
@@ -61,6 +63,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "react-select": "^3.1.1",
+    "react-toastify": "^6.2.0",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.1",
     "sweetalert2": "^10.9.0",
