--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
+    "@mapbox/mapbox-gl-rtl-text": "^0.2.3",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -20,6 +21,7 @@
     "@types/jest": "^24.9.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
+    "@types/mapbox-gl": "^2.0.0",
     "@types/node": "^12.19.0",
     "@types/react": "^16.9.53",
     "@types/react-beautiful-dnd": "^13.0.0",
@@ -45,6 +47,7 @@
     "jss": "^10.4.0",
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.20",
+    "mapbox-gl": "^1.12.0",
     "material-table": "^1.57.2",
     "material-ui-search-bar": "^1.0.0",
     "node-sass": "^4.14.1",
