--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-js-to-ts": "^1.4.0",
     "react-modal": "^3.11.2",
     "react-modern-calendar-datepicker": "^3.1.6",
+    "react-number-format": "^4.4.1",
     "react-query": "^2.25.2",
     "react-query-devtools": "^2.6.0",
     "react-router-dom": "^5.2.0",
