Add encryption for transfer routing

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/classnames": "^2.2.11",
+    "@types/crypto-js": "^4.0.1",
     "@types/debounce": "^1.2.0",
     "@types/jest": "^24.9.1",
     "@types/jsonwebtoken": "^8.5.0",
@@ -35,6 +36,7 @@
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
+    "crypto-js": "^4.0.0",
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
     "filefy": "^0.1.10",
@@ -54,6 +56,7 @@
     "node-sass": "^4.14.1",
     "notistack": "^1.0.3",
     "npm": "^6.14.10",
+    "query-string": "^6.13.7",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
