--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
-    "@types/mapbox-gl": "^2.0.0"
+    "@types/mapbox-gl": "^2.0.0",
+    "@types/query-string": "^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
