--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-select": "^3.0.28",
+    "@types/react-swipeable-views": "^0.13.0",
     "@types/react-transition-group": "^4.4.0",
     "@types/styled-components": "^5.1.5",
     "@types/sweetalert": "^2.0.4",
@@ -70,6 +71,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "react-select": "^3.1.1",
+    "react-swipeable-views": "^0.13.9",
     "react-toastify": "^6.2.0",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.1",
