--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jsonwebtoken": "^8.5.1",
     "jss": "^10.4.0",
     "jss-rtl": "^0.3.0",
+    "leaflet": "^1.7.1",
     "lodash": "^4.17.20",
     "mapbox-gl": "^1.12.0",
     "material-table": "^1.57.2",
@@ -63,6 +64,7 @@
     "react-dom": "^17.0.1",
     "react-i18next": "^11.7.3",
     "react-js-to-ts": "^1.4.0",
+    "react-leaflet": "^3.0.5",
     "react-modal": "^3.11.2",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-number-format": "^4.4.1",
@@ -80,6 +82,7 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.5.19",
     "@types/mapbox-gl": "^2.0.0",
     "@types/query-string": "^6.3.0"
   },
