--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/styled-components": "^5.1.5",
     "@types/sweetalert": "^2.0.4",
     "axios": "^0.20.0",
+    "axios-hooks": "^2.3.0",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "crypto-js": "^4.0.0",
