--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@date-io/jalaali": "^1.3.12",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
@@ -56,6 +57,8 @@
     "mapbox-gl": "^1.12.0",
     "material-table": "^1.57.2",
     "material-ui-search-bar": "^1.0.0",
+    "moment": "^2.24.0",
+    "moment-jalaali": "^0.9.1",
     "node-sass": "^4.14.1",
     "notistack": "^1.0.3",
     "npm": "^6.14.10",
