Add st script to start and open in Google Chrome
For use in Mac. It doesn't open browser without it.

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "st": "BROWSER='Google Chrome' react-scripts start",
     "build": "react-scripts build",
     "build:dev": "SET NODE_ENV=dev npm run build --dev --configuration=dev && react-scripts build",
     "lint": "eslint './src/**/*.{jsx,js,ts,tsx}'",
