--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-i18next": "^11.7.3",
     "react-js-to-ts": "^1.4.0",
     "react-leaflet": "^3.1.0",
+    "react-map-gl": "^6.1.7",
     "react-modal": "^3.11.2",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-number-format": "^4.4.4",
