--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
     "react-i18next": "^11.7.3",
     "react-js-to-ts": "^1.4.0",
     "react-leaflet": "^3.1.0",
