--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@types/leaflet": "^1.5.21",
     "@types/mapbox-gl": "^2.0.0",
     "@types/query-string": "^6.3.0",
+    "prettier": "2.2.1",
     "redux-devtools-extension": "^2.13.8",
     "sass": "^1.32.5"
   },
