--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/classnames": "^2.2.11",
     "@types/crypto-js": "^4.0.1",
     "@types/debounce": "^1.2.0",
+    "@types/intro.js": "^3.0.0",
     "@types/jest": "^24.9.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
@@ -50,6 +51,8 @@
     "history": "^5.0.0",
     "i18next": "^19.8.2",
     "install": "^0.13.0",
+    "intro.js": "^3.3.1",
+    "intro.js-react": "^0.3.0",
     "izitoast-react": "^1.0.16",
     "jalaali-js": "^1.1.5",
     "jalali-moment": "^3.3.9",
