--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "styled-components": "^5.2.1",
     "sweetalert2": "^10.9.0",
     "sweetalert2-react-content": "^3.2.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "@types/leaflet": "^1.5.21",
