--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-scripts": "3.4.4",
     "react-select": "^3.1.1",
     "react-swipeable-views": "^0.13.9",
+    "react-to-print": "^2.12.4",
     "react-toastify": "^6.2.0",
     "react-transition-group": "^4.4.1",
     "recharts": "^2.0.4",
