Feature/important message

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,9 +13,12 @@
     "editor.formatOnPaste": false
   },
   "cSpell.words": [
+    "Notif",
     "Recaptcha",
     "Scrollable",
+    "Swal",
     "daroog",
+    "fontawesome",
     "fortawesome",
     "najva"
   ],
