--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-query": "^2.26.2",
     "react-query-devtools": "^2.6.0",
     "react-redux": "^7.2.2",
+    "react-repeatable": "^2.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "react-select": "^3.1.1",
