--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,10 +13,11 @@
   "extends": [
     "plugin:@typescript-eslint/recommended"
   ],
-  "plugins": [],
+  "plugins": ["prettier"],
   "rules": {
+    "prettier/prettier": "error",
     "jsx-a11y/label-has-associated-control": 0,
-    "unused-imports/no-unused-imports" : "off",
+    "unused-imports/no-unused-imports" : "error",
     "unused-imports/no-unused-vars-ts": "off",
     "unused-imports/no-duplicate-case": "off",
     "@typescript-eslint/no-unused-vars": "off",
