Change true to cls in gitlab-ci script for prod

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ deploy_daroog:
   only:
     - main
   script:
-    - "rm C:/daroog/tabadol/front/static/ -force -recurse"
+    - "(rm C:/daroog/tabadol/front/static/ -force -recurse) -or (dir)"
     - "cp ./build/* C:/daroog/tabadol/front/ -force -recurse"
   environment:
     name: production
