Implement back button in pack submit page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,9 +13,12 @@
     "editor.formatOnPaste": false
   },
   "cSpell.words": [
+    "Arze",
+    "Forookhteh",
     "Notif",
     "Recaptcha",
     "Scrollable",
+    "Shodeh",
     "Swal",
     "daroog",
     "datatable",
