--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "jss": "^10.4.0",
     "jss-rtl": "^0.3.0",
     "leaflet": "^1.7.1",
+    "leaflet.locatecontrol": "^0.73.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^1.12.0",
     "material-table": "^1.57.2",
@@ -81,6 +82,8 @@
     "react-i18next": "^11.7.3",
     "react-js-to-ts": "^1.4.0",
     "react-leaflet": "^3.1.0",
+    "react-leaflet-current-location-control": "0.0.14",
+    "react-leaflet-locate-control": "^0.1.6",
     "react-map-gl": "^6.1.7",
     "react-modal": "^3.11.2",
     "react-modern-calendar-datepicker": "^3.1.6",
@@ -109,6 +112,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.7.0",
+    "@types/leaflet.locatecontrol": "^0.60.7",
     "@types/mapbox-gl": "^2.0.0",
     "@types/query-string": "^6.3.0",
     "eslint-config-prettier": "^8.3.0",
